--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm install -w frontend && npm run build -w frontend",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "backend/public",
   "installCommand": "npm install",
   "framework": null
