sua lai file vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "bash build.sh",
   "outputDirectory": "backend/public",
   "installCommand": "npm install",
   "framework": null
